Fix demo to use shell script and smaller terminal
- Use bash script instead of Java subprocess (fixes classpath issue)
- Use 3-row terminal so content scrolls into history
- Clean output format with transcript markers
- volatileRowCount=1, stabilityWindowMillis=100 for demo

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>